kubernetes/weather-app-demo/base/mongo-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-db
  labels:
    app: weather-app-demo
spec:
  serviceName: mongo-db-service  
  replicas: 1  
  selector:
    matchLabels:
      app: weather-app-demo
  template:
    metadata:
      labels:
        app: weather-app-demo
    spec:
      containers:
        - name: mongo-db-container
          image: mongo:latest
          ports:
            - containerPort: 27017 
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db  
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 256Mi
