kubernetes/weather-app-demo/base/mongo-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-db-service
  labels:
    app: weather-app-demo
spec:
  type: ClusterIP
  selector:
    app: weather-app-demo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
