kubernetes/weather-app-demo/base/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  labels:
    app: mongo
spec:
  type: ClusterIP # Exposes the service within the cluster
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
