kubernetes/weather-app-demo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app-demo-service
  labels:
    app: weather-app-demo
spec:
  type: ClusterIP
  selector:
    app: weather-app-demo
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 5000
